fix: docs and Buildkit for wrapper scenario